helm-charts/nginx-ingress/ingress.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:

  name: test

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  rules:

  - host: foo.bar.com

    http:

      paths:

      - path: /foo

        backend:

          serviceName: svc1

          servicePort: 80

      - path: /bar

        backend:

          serviceName: svc2

          servicePort: 80
